WebCore/platform/graphics/svg/cg/SVGPaintServerGradientCg.cpp
@@ -267,7 +267,8 @@ bool SVGPaintServerGradient::setup(GraphicsContext*& context, const RenderObject
             IntRect maskRect = const_cast<RenderObject*>(object)->absoluteBoundingBoxRect();
             maskRect = object->absoluteTransform().inverse().mapRect(maskRect);
 
-            ImageBuffer* maskImage(GraphicsContext::createImageBuffer(IntSize(maskRect.width(), maskRect.height()), false));
+            ImageBuffer* maskImage = GraphicsContext::createImageBuffer(IntSize(maskRect.width(), maskRect.height()), false);
+            // FIXME: maskImage could be NULL
             GraphicsContext* maskImageContext = maskImage->context();
 
             maskImageContext->save();
